--- a/USA-population.html
+++ b/USA-population.html
@@ -1,3 +1,5 @@
+embed = require("vega-embed@6")
+
 vlspec = ({
   "$schema": "https://vega.github.io/schema/vega-lite/v5.json",
   "description": "A bar chart showing the US population distribution of age groups and gender in 2000.",
@@ -22,3 +24,5 @@ vlspec = ({
     "opacity": {"value": 0.7}
   }
 })
+
+viewof view = embed(vlspec)
