--- a/prueba.html
+++ b/prueba.html
@@ -1,1 +1,11 @@
-https://observablehq.com/embed/a8cbc8d0ff41005a?cells=viewof+view%2Cviewof+year
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Poblacion por Departamento</title>
+</head>
+<body>
+<div class="flourish-embed flourish-hierarchy" data-src="visualisation/6742145"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+</body>
+</html>
