--- a/prueba.html
+++ b/prueba.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Poblacion por Departamento</title>
-</head>
-<body>
-<div class="flourish-embed flourish-hierarchy" data-src="visualisation/6742145"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
-</body>
-</html>
+<iframe src='https://flo.uri.sh/visualisation/6742145/embed' title='Interactive or visual content' class='flourish-embed-iframe' frameborder='0' scrolling='no' style='width:100%;height:600px;' sandbox='allow-same-origin allow-forms allow-scripts allow-downloads allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation'></iframe><div style='width:100%!;margin-top:4px!important;text-align:right!important;'><a class='flourish-credit' href='https://public.flourish.studio/visualisation/6742145/?utm_source=embed&utm_campaign=visualisation/6742145' target='_top' style='text-decoration:none!important'><img alt='Made with Flourish' src='https://public.flourish.studio/resources/made_with_flourish.svg' style='width:105px!important;height:16px!important;border:none!important;margin:0!important;'> </a></div>
