--- a/Python_altair1.html
+++ b/Python_altair1.html
@@ -7,13 +7,23 @@
 </head>
 
 <body>  
-  <div id="vis"></div>
   
+  <div id="vis"></div>
   <script>
-    const spec = "visualization.vl.json";
+    const spec = "visualization1.vl.json";
   	vegaEmbed("#vis", spec)
     	// result.view provides access to the Vega View API
       .then(result => console.log(result))
       .catch(console.warn);
   </script>
+	
+  <div id="vis2"></div>
+  <script>
+    const spec = "visualization2.vl.json";
+  	vegaEmbed("#vis2", spec)
+    	// result.view provides access to the Vega View API
+      .then(result => console.log(result))
+      .catch(console.warn);
+  </script>	
+	
 </body>
