--- a/Python_altair1.html
+++ b/Python_altair1.html
@@ -16,7 +16,8 @@
       .then(result => console.log(result))
       .catch(console.warn);
   </script>
-	
+<body>  
+<body>  	
   <div id="vis2"></div>
   <script>
     const spec = "visualization2.vl.json";
