--- a/Python_altair1.html
+++ b/Python_altair1.html
@@ -16,12 +16,12 @@
       .then(result => console.log(result))
       .catch(console.warn);
   </script>
-<body>  
-<body>  	
-  <div id="vis2"></div>
+
+	
+  <div id="vis"></div>
   <script>
     const spec = "visualization2.vl.json";
-  	vegaEmbed("#vis2", spec)
+  	vegaEmbed("#vis", spec)
     	// result.view provides access to the Vega View API
       .then(result => console.log(result))
       .catch(console.warn);
