--- a/Python_altair1.html
+++ b/Python_altair1.html
@@ -17,7 +17,19 @@
       .catch(console.warn);
   </script>
 
-	
+
+</body>
+
+<!DOCTYPE html>
+<head>
+  <meta charset="utf-8">
+  <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vega-lite@5"></script>
+	<script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
+</head>
+
+<body>  
+  	
   <div id="vis"></div>
   <script>
     const spec = "visualization2.vl.json";
