--- a/Python_altair1.html
+++ b/Python_altair1.html
@@ -8,19 +8,19 @@
 
 <body>  
    
-  <div id="vis"></div>
+  <div id="vis1"></div>
   <script>
-    const spec = "visualization1.vl.json";
-  	vegaEmbed("#vis", spec)
+    const spec1 = "visualization1.vl.json";
+  	vegaEmbed("#vis1", spec1)
     	// result.view provides access to the Vega View API
       .then(result => console.log(result))
       .catch(console.warn);
   </script>
 	
-  <div id="vis"></div>
+  <div id="vis2"></div>
   <script>
-    const spec = "visualization2.vl.json";
-  	vegaEmbed("#vis", spec)
+    const spec2 = "visualization2.vl.json";
+  	vegaEmbed("#vis2", spec2)
     	// result.view provides access to the Vega View API
       .then(result => console.log(result))
       .catch(console.warn);
