--- a/covidobservable.html
+++ b/covidobservable.html
@@ -6,7 +6,20 @@
   <title>JS Bin</title>
 </head>
 <body>
-<iframe width="100%" height="385" frameborder="0"
-  src="https://observablehq.com/embed/@anavproano/demo-vega-lite-embebido-test-2?cells=viewof+view%2Cviewof+year"></iframe>
+
+<div id="observablehq-viewof-view-86c44afc"></div>
+<div id="observablehq-viewof-year-86c44afc"></div>
+
+<script type="module">
+import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
+import define from "https://api.observablehq.com/@anavproano/demo-vega-lite-embebido-test-2.js?v=3";
+new Runtime().module(define, name => {
+  if (name === "viewof view") return new Inspector(document.querySelector("#observablehq-viewof-view-86c44afc"));
+  if (name === "viewof year") return new Inspector(document.querySelector("#observablehq-viewof-year-86c44afc"));
+  return ["vlspec"].includes(name);
+});
+
+</script>
+  
 </body>
 </html>
