--- a/covidobservable.html
+++ b/covidobservable.html
@@ -7,18 +7,18 @@
 </head>
 <body>
 
-<div id="observablehq-viewof-view-86c44afc"></div>
-<div id="observablehq-viewof-year-86c44afc"></div>
+<div id="observablehq-viewof-view-bb868bfa"></div>
+<div id="observablehq-viewof-year-bb868bfa"></div>
+<p>Credit: <a href="https://observablehq.com/@anavproano/demo-vega-lite-embebido-test-2">TP Observable - Vega-Lite by anavproano</a></p>
 
 <script type="module">
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@4/dist/runtime.js";
 import define from "https://api.observablehq.com/@anavproano/demo-vega-lite-embebido-test-2.js?v=3";
 new Runtime().module(define, name => {
-  if (name === "viewof view") return new Inspector(document.querySelector("#observablehq-viewof-view-86c44afc"));
-  if (name === "viewof year") return new Inspector(document.querySelector("#observablehq-viewof-year-86c44afc"));
+  if (name === "viewof view") return new Inspector(document.querySelector("#observablehq-viewof-view-bb868bfa"));
+  if (name === "viewof year") return new Inspector(document.querySelector("#observablehq-viewof-year-bb868bfa"));
   return ["vlspec"].includes(name);
 });
-
 </script>
   
 </body>
